Fix bugs from QA and integrate whatsapp